--- a/jeanweaves_public/templates/jeanweaves_public/_footer.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_footer.html
@@ -2,11 +2,9 @@
 <footer class="site-footer row-fluid">
   <div class="site-footer-contents span6 offset3 row-fluid">
     <ul class="footer-site-nav span4">
-      <li class="footer-site-nav-item"><a href="{% url 'index' %}" title="{% trans 'Home' %}" class="site-nav-link">{% trans 'Home' %}</a></li>
-      <li class="footer-site-nav-item"><a href="{% url 'about' %}" title="{% trans 'About' %}" class="site-nav-link">{% trans 'About' %}</a></li>
-      <li class="footer-site-nav-item"><a href="{% url 'exhibits' %}" title="{% trans 'Exhibits' %}" class="site-nav-link">{% trans 'Exhibits' %}</a></li>
-      {% comment %}<li class="footer-site-nav-item"><a href="{% url 'tools' %}" title="{% trans 'Tools' %}" class="site-nav-link">{% trans 'Tools' %}</a></li>{% endcomment %}
-      <li class="footer-site-nav-item"><a href="{% url 'contact' %}" title="{% trans 'Contact me' %}" class="site-nav-link">{% trans 'Contact me' %}</a></li>
+      {% for nav_link in site.nav %}
+        <li class="footer-site-nav-item"><a href="{{ nav_link.href }}" title="{{ nav_link.title }}" class="site-nav-link">{{ nav_link.label }}</a></li>
+      {% endfor %}
     </ul>
     <div id="hcard-Jean-Williams" class="vcard span4">
       <div class="row-fluid">
