Add custom icon font with an RSS icon

--- a/jeanweaves_public/templates/jeanweaves_public/_styles.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_styles.html
@@ -3,3 +3,6 @@
 <link href="{% static 'bootstrap-2.3.1/css/bootstrap.min.css' %}" rel='stylesheet' type='text/css'>
 <link href="{% static 'bootstrap-2.3.1/css/bootstrap-responsive.min.css' %}" rel='stylesheet' type='text/css'>
 <link href="{% static 'css/main.css' %}" rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="{% static 'css/fontello.css' %}">
+<link rel="stylesheet" href="{% static 'css/animation.css' %"><!--[if IE 7]>
+<link rel="stylesheet" href="{% static 'css/fontello-ie7.css' %"><![endif]-->
