Another type in _styles :/

--- a/jeanweaves_public/templates/jeanweaves_public/_styles.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_styles.html
@@ -5,4 +5,4 @@
 <link href="{% static 'css/main.css' %}" rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
 <link rel="stylesheet" href="{% static 'css/animation.css' %}"><!--[if IE 7]>
-<link rel="stylesheet" href="{% static 'css/fontello-ie7.css' %"><![endif]-->
+<link rel="stylesheet" href="{% static 'css/fontello-ie7.css' %}"><![endif]-->
