Remove use of icon :/

--- a/jeanweaves_blog/templates/jeanweaves_blog/posts.html
+++ b/jeanweaves_blog/templates/jeanweaves_blog/posts.html
@@ -3,7 +3,7 @@
 {% block main %}
 <div class="row-fluid">
   <div class="page-content span6 offset3">
-    <a href="http://jeanweaves.tumblr.com/rss" title="{% trans 'Subscribe to posts' %}" class="blog-subscribe-link"><i class="icon-rss"></i> {% trans 'Subscribe' %}</a>
+    <a href="http://jeanweaves.tumblr.com/rss" title="{% trans 'Subscribe to posts' %}" class="blog-subscribe-link">{% trans 'Subscribe' %}</a>
     <ol class="blog-posts">
       {% for post in posts %}
         <li class="blog-post">
