--- a/jeanweaves_public/templates/jeanweaves_public/_styles.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_styles.html
@@ -3,3 +3,4 @@
 <link href="{% static 'bootstrap-2.3.1/css/bootstrap.min.css' %}" rel='stylesheet' type='text/css'>
 <link href="{% static 'bootstrap-2.3.1/css/bootstrap-responsive.min.css' %}" rel='stylesheet' type='text/css'>
 <link href="{% static 'css/main.css' %}" rel='stylesheet' type='text/css'>
+<link href="{% static 'css/blog.css' %}" rel='stylesheet' type='text/css'>
