Change header on about page

--- a/jeanweaves_public/templates/jeanweaves_public/about.html
+++ b/jeanweaves_public/templates/jeanweaves_public/about.html
@@ -3,7 +3,7 @@
 {% block main %}
 <div class="row-fluid">
   <div class="span6 offset3">
-  <h2>{% trans 'Who I Am and Why I Weave' %}</h2>
+  <h2>{% trans 'Drawn to the Loom' %}</h2>
   <p>{% trans 'I come from a long line of artisans, although they wouldn’t call themselves that. They used the tools and materials available to create something beautiful and useful.  My journey into weaving began by watching one grandmother crochet, another quilt, seeing the rag rugs woven by my parents on the old loom in the basement. These voices joined those of teachers and friends who shared their love of fiber.' %}</p>
   <p>{% trans 'Weaving satisfies a curiosity for me.   Beautiful textiles intrigue me and make me wonder how they “work”, how the weaver gets the threads to do what they do.  And how can I use that technique?' %}</p>
   <p>{% trans 'Each of my pieces begins with a purpose. What am I weaving? How will it be used? What does it need to be? That purpose will determine the structure –how the threads interlace–and fiber.  Damask calls for fine yarns with lots of luster to accentuate the pattern. Towels need to be thirsty, using cotton or linen in a weave that is sturdy. Scarves should be soft against the skin. Stuffed animals call for textured yarn and pattern to imitate their hides.' %}</p>
