Convert app templates to jinja
* Convert HTML templates to jinja
* Update views to use coffin ninja rendering
* Convert all views to individual page view classes
* Update blog post render template tag for ninja
* Add putz dependency (unversioned, always pull in latest)
* Convert post datetimes to project time-zone in blog backend

--- a/jeanweaves_blog/templates/jeanweaves_blog/posts.html
+++ b/jeanweaves_blog/templates/jeanweaves_blog/posts.html
@@ -1,13 +1,12 @@
 {% extends page.layout %}
-{% load i18n tumblr_posts %}
 {% block main %}
 <div class="row-fluid">
   <div class="page-content span6 offset3">
-    <a href="http://jeanweaves.tumblr.com/rss" title="{% trans 'Subscribe to posts' %}" class="blog-subscribe-link">{% trans 'Subscribe' %}</a>
+    <a href="http://jeanweaves.tumblr.com/rss" title="{% trans %}Subscribe to posts{% endtrans %}" class="blog-subscribe-link">{% trans %}Subscribe{% endtrans %}</a>
     <ol class="blog-posts">
       {% for post in posts %}
         <li class="blog-post">
-          {% tumblr_post post %}
+          {{ render_tumblr_post(post) }}
         </li>
       {% endfor %}
     </ol>
