--- a/jeanweaves_galleries/templates/jeanweaves_galleries/runners.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/runners.html
@@ -1,6 +1,5 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block gallery_content %}
-<h2>{% trans 'Runners' %}</h2>
-<p>{% trans 'Table runners are approximately 14” x 36”, 14” x 48” and 14” x 60”.' %}</p>
+<h2>{% trans %}Runners{% endtrans %}</h2>
+<p>{% trans %}Table runners are approximately 14” x 36”, 14” x 48” and 14” x 60”.{% endtrans %}</p>
 {% endblock %}
