--- a/jeanweaves_galleries/templates/jeanweaves_galleries/scarves.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/scarves.html
@@ -1,6 +1,5 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block gallery_content %}
-<h2>{% trans 'Scarves' %}</h2>
-<p>{% trans 'Scarves vary in length.' %}</p>
+<h2>{% trans %}Scarves{% endtrans %}</h2>
+<p>{% trans %}Scarves vary in length.{% endtrans %}</p>
 {% endblock %}
