--- a/jeanweaves_public/templates/jeanweaves_public/_header.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_header.html
@@ -1,9 +1,8 @@
-{% load i18n %}
 <header class="site-header row-fluid">
   <div class="site-header-contents span6 offset3">
     <div class="site-header-brand">
-      <h1 class="site-name"><span class="fn">{{ site.author }}</span>, {% trans 'Handweaver' %}</h1>
-      <h2 class="site-tagline">{% trans 'Textiles to delight your heart and home' %}</h2>
+      <h1 class="site-name"><span class="fn">{{ site.author }}</span>, {% trans %}Handweaver{% endtrans %}</h1>
+      <h2 class="site-tagline">{% trans %}Textiles to delight your heart and home{% endtrans %}</h2>
     </div>
     <nav>
       <ul class="site-nav">
