--- a/jeanweaves_public/templates/jeanweaves_public/tools.html
+++ b/jeanweaves_public/templates/jeanweaves_public/tools.html
@@ -1,7 +1,6 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block main %}
-<h2>{% trans 'Tools' %}</h2>
+<h2>{% trans %}Tools{% endtrans %}</h2>
 
 To give you an idea of what goes into each handwoven textile in this collection:
  
