--- a/jeanweaves_blog/templates/jeanweaves_blog/tumblr_posts/text.html
+++ b/jeanweaves_blog/templates/jeanweaves_blog/tumblr_posts/text.html
@@ -1,5 +1,5 @@
 <article class="post-text">
   <h1 class="post-text-title">{{ post.title|safe }}</h1>
-  <h2><time datetime="{{ post.date|date:'c' }}" pubdate>{{ post.date }}</time></h2>
+  <h2><time datetime="{{ post.date|date('c') }}" pubdate>{{ post.date|date('DATETIME_FORMAT') }}</time></h2>
   <div class="post-text-body">{{ post.body|safe }}</div>
 </article>
