--- a/jeanweaves_galleries/templates/jeanweaves_galleries/animals.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/animals.html
@@ -1,6 +1,5 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block gallery_content %}
-<h2>{% trans 'Animals' %}</h2>
-<p>{% trans 'The cow was the first animal I designed, a Holstein in honor of my dairying background. Next came the chicken, then the goat.  The weave structures are whimsical interpretations of the animals’ coats, their bodies designed for play or display' %}.</p>
+<h2>{% trans %}Animals{% endtrans %}</h2>
+<p>{% trans %}The cow was the first animal I designed, a Holstein in honor of my dairying background. Next came the chicken, then the goat.  The weave structures are whimsical interpretations of the animals’ coats, their bodies designed for play or display{% endtrans %}.</p>
 {% endblock %}
