--- a/jeanweaves_galleries/templates/jeanweaves_galleries/placemats-and-napkins.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/placemats-and-napkins.html
@@ -1,6 +1,5 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block gallery_content %}
-<h2>{% trans 'Placemats and Napkins' %}</h2>
-<p>{% trans 'Napkins are approximately 15” x 15”. Placemats are approximately 13” x 18”.' %}</p>
+<h2>{% trans %}Placemats and Napkins{% endtrans %}</h2>
+<p>{% trans %}Napkins are approximately 15” x 15”. Placemats are approximately 13” x 18”.{% endtrans %}</p>
 {% endblock %}
