--- a/jeanweaves_galleries/templates/jeanweaves_galleries/throws.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/throws.html
@@ -1,6 +1,5 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block gallery_content %}
-<h2>{% trans 'Throws' %}</h2>
-<p>{% trans 'Throws range in size from small (38” X 56”), medium (42” X 60”) to large (48” X 65”).' %}</p>
+<h2>{% trans %}Throws{% endtrans %}</h2>
+<p>{% trans %}Throws range in size from small (38” X 56”), medium (42” X 60”) to large (48” X 65”).{% endtrans %}</p>
 {% endblock %}
