--- a/jeanweaves_public/templates/jeanweaves_public/_footer.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_footer.html
@@ -1,4 +1,3 @@
-{% load i18n %}
 <footer class="site-footer row-fluid">
   <div class="site-footer-contents span6 offset3 row-fluid">
     <ul class="footer-site-nav span4">
@@ -9,8 +8,8 @@
     <div id="hcard-Jean-Williams" class="vcard span4">
       <div class="row-fluid">
         <div>
-          <p><span class="fn">{{ site.author }}</span>, {% trans 'Handweaver' %}</p>
-          <p>{% trans 'Textiles to delight your heart and home' %}</p>
+          <p><span class="fn">{{ site.author }}</span>, {% trans %}Handweaver{% endtrans %}</p>
+          <p>{% trans %}Textiles to delight your heart and home{% endtrans %}</p>
           <p>
             <a class="email" href="mailto:{{ site.author_email }}">{{ site.author_email }}</a>
           </p>
