--- a/jeanweaves_public/templates/jeanweaves_public/_layout.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_layout.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-us"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en-us"> <![endif]-->
@@ -12,7 +11,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'jeanweaves_public/_styles.html' %}
-    {% comment %}<script src="{% static 'js/vendor/modernizr-2.6.2.min.js' %}"></script>{% endcomment %}
+    {#<script src="{% static 'js/vendor/modernizr-2.6.2.min.js' %}"></script>#}
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -23,7 +22,7 @@
       {% block main %}{% endblock %}
     </div>
     {% include 'jeanweaves_public/_footer.html' %}
-    {% comment %}{% include 'jeanweaves_public/_scripts.html' %}{% endcomment %}
-    {% comment %}{% include 'jeanweaves_public/_analytics.html' %}{% endcomment %}
+    {#{% include 'jeanweaves_public/_scripts.html' %}#}
+    {#{% include 'jeanweaves_public/_analytics.html' %}#}
   </body>
 </html>
