--- a/jeanweaves_public/templates/jeanweaves_public/exhibits.html
+++ b/jeanweaves_public/templates/jeanweaves_public/exhibits.html
@@ -1,9 +1,8 @@
 {% extends page.layout %}
-{% load i18n %}
 {% block main %}
 <div class="row-fluid">
   <div class="span3 offset3">
-    <h2>{% trans 'Exhibits' %}</h2>
+    <h2>{% trans %}Exhibits{% endtrans %}</h2>
   </div>
 </div>
 <div class="row-fluid">
