Switch from coffin to django-jinja
* Actually that worked pretty well
* Got to delete some code and the compat global functions are more explicit

--- a/jeanweaves_public/templates/jeanweaves_public/_layout.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_layout.html
@@ -11,7 +11,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% include 'jeanweaves_public/_styles.html' %}
-    {#<script src="{% static 'js/vendor/modernizr-2.6.2.min.js' %}"></script>#}
+    {#<script src="{{ static('js/vendor/modernizr-2.6.2.min.js') }}"></script>#}
   </head>
   <body>
     <!--[if lt IE 7]>
