Show detail photos on rollover, when available, in galleries
* Add JS to show detail photos on roll-over, and pre-load detail images to avoid roll-over delay
* Pages and site_info have lists of scripts to render (with the defer attribute)
* Replace jQuery with zepto.js
* cache jinja template bytecodes
* turn on jinja2 auto-escape

--- a/jeanweaves_galleries/templates/jeanweaves_galleries/_layout.html
+++ b/jeanweaves_galleries/templates/jeanweaves_galleries/_layout.html
@@ -16,7 +16,7 @@
               <img class="image-set-image gallery-link-image" src="{{ galleries.base_photo_url }}{{ photo.src_path }}"{% if photo.alt %} alt="{{ photo.alt }}"{% endif %}{% if photo.title %} title="{{ photo.title }}"{% endif %}>
             </a>
           {% else %}
-          <img class="image-set-image" src="{{ galleries.base_photo_url }}{{ photo.src_path }}"{% if photo.alt %} alt="{{ photo.alt }}"{% endif %}{% if photo.title %} title="{{ photo.title }}"{% endif %}>
+          <img class="image-set-image" src="{{ galleries.base_photo_url }}{{ photo.src_path }}"{% if photo.alt %} alt="{{ photo.alt }}"{% endif %}{% if photo.title %} title="{{ photo.title }}"{% endif %}{% if photo.detail_src_path %} data-detail-src="{{ galleries.base_photo_url }}{{ photo.detail_src_path }}"  data-src="{{ galleries.base_photo_url }}{{ photo.src_path }}"{% endif %}>
           {% endif %}
         </li>
       {% endfor %}
