--- a/jeanweaves_public/templates/jeanweaves_public/_layout.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_layout.html
@@ -22,7 +22,7 @@
       {% block main %}{% endblock %}
     </div>
     {% include 'jeanweaves_public/_footer.html' %}
-    {#{% include 'jeanweaves_public/_scripts.html' %}#}
+    {% include 'jeanweaves_public/_scripts.html' %}
     {#{% include 'jeanweaves_public/_analytics.html' %}#}
   </body>
 </html>
