--- a/jeanweaves_blog/templates/jeanweaves_blog/posts.html
+++ b/jeanweaves_blog/templates/jeanweaves_blog/posts.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="row-fluid">
   <div class="page-content span6 offset3">
-    <a href="http://jeanweaves.tumblr.com/rss" title="{% trans %}Subscribe to posts{% endtrans %}" class="blog-subscribe-link">{% trans %}Subscribe{% endtrans %}</a>
+    <a href="http://jeanweaves.wordpress.com/feed/" title="{% trans %}Subscribe to posts{% endtrans %}" class="blog-subscribe-link">{% trans %}Subscribe{% endtrans %}</a>
     <ol class="blog-posts">
       {% for post in posts %}
         <li class="">
