Add and configure analytics tracking with Google Analytics

--- a/jeanweaves_public/templates/jeanweaves_public/_layout.html
+++ b/jeanweaves_public/templates/jeanweaves_public/_layout.html
@@ -23,6 +23,6 @@
     </div>
     {% include 'jeanweaves_public/_footer.html' %}
     {% include 'jeanweaves_public/_scripts.html' %}
-    {#{% include 'jeanweaves_public/_analytics.html' %}#}
+    {% include 'jeanweaves_analytics/analytics_tracking.html' %}
   </body>
 </html>
